Added Animations and made scroll smoother

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
               </div>
               <div id="explore" class="u-align-left u-container-style u-grey-5 u-layout-cell u-right-cell u-size-30 u-size-xs-60 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <h2 class="u-text u-text-default u-text-1">We are,<br>Micropoint
+                  <h2 class="u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">We are,<br>Micropoint
                   </h2>
-                  <p class="u-text u-text-2">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
-                  <a href="#sec-edb9" class="u-btn u-button-style u-palette-1-base u-btn-1">Products</a>
+                  <p class="u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="200">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                  <a href="#sec-edb9" class="u-btn u-button-style u-palette-1-base u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="200">Products</a>
                 </div>
               </div>
             </div>
@@ -83,7 +83,7 @@
         <div class="u-expanded-width u-products u-products-1" data-site-sorting-prop="created" data-site-sorting-order="desc" data-items-per-page="3">
           <div class="u-repeater u-repeater-1"><!--product_item-->
             <div class="u-align-center u-container-style u-products-item u-repeater-item u-white u-repeater-item-1">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1"><!--product_image-->
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1" data-animation-name="customAnimationIn" data-animation-duration="500"><!--product_image-->
                 <img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-1" src="images/self ink.jpg"><!--/product_image--><!--product_title-->
                 <h4 class="u-product-control u-text u-text-1">
                   <a class="u-product-title-link" href="#"><!--product_title_content-->Self Ink<!--/product_title_content--></a>
@@ -92,7 +92,7 @@
               </div>
             </div><!--/product_item--><!--product_item-->
             <div class="u-align-center u-container-style u-products-item u-repeater-item u-white u-repeater-item-2">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2"><!--product_image-->
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2" data-animation-name="customAnimationIn" data-animation-duration="500" data-animation-delay="150"><!--product_image-->
                 <img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-2" src="images/polymer.jpg"><!--/product_image--><!--product_title-->
                 <h4 class="u-product-control u-text u-text-2">
                   <a class="u-product-title-link" href="#"><!--product_title_content-->Polymer<!--/product_title_content--></a>
@@ -101,7 +101,7 @@
               </div>
             </div><!--/product_item--><!--product_item-->
             <div class="u-align-center u-container-style u-products-item u-repeater-item u-white u-repeater-item-3">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3"><!--product_image-->
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3" data-animation-name="customAnimationIn" data-animation-duration="500" data-animation-delay="250"><!--product_image-->
                 <img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-3" src="images/date changing.jpg"><!--/product_image--><!--product_title-->
                 <h4 class="u-product-control u-text u-text-3">
                   <a class="u-product-title-link" href="#"><!--product_title_content-->Date Changing<!--/product_title_content--></a>
@@ -120,7 +120,7 @@
             <div class="u-layout-row">
               <div class="u-size-30 u-size-60-md">
                 <div class="u-layout-col">
-                  <div class="u-container-style u-image u-layout-cell u-left-cell u-size-60 u-image-1" src="" data-image-width="1080" data-image-height="1080">
+                  <div class="u-container-style u-image u-layout-cell u-left-cell u-size-60 u-image-1" src="" data-image-width="1080" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000">
                     <div class="u-container-layout u-valign-middle u-container-layout-1"></div>
                   </div>
                 </div>
@@ -131,14 +131,14 @@
                     <div class="u-layout-row">
                       <div class="u-align-left u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                         <div class="u-container-layout u-valign-top u-container-layout-2">
-                          <h3 class="u-text u-text-1">We<br>aim for<br>HAPPY<br>
+                          <h3 class="u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">We<br>aim for<br>HAPPY<br>
                             <span style="font-size: 2.4rem;">Customers</span>
                           </h3>
                         </div>
                       </div>
                       <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-3">
-                        <div class="u-container-layout u-valign-top u-container-layout-3">
-                          <p class="u-text u-text-2">
+                        <div class="u-container-layout u-valign-top u-container-layout-3" data-animation-name="customAnimationIn" data-animation-duration="1000">
+                          <p class="u-text u-text-2" >
                             <div class="container">
                               <span class="num" data-val="400">000</span>
                               <span class="text">Stamps Delivered</span>
@@ -151,8 +151,8 @@
                   <div class="u-size-30">
                     <div class="u-layout-row">
                       <div class="u-align-left u-container-style u-layout-cell u-size-30 u-layout-cell-4">
-                        <div class="u-container-layout u-valign-top u-container-layout-4">
-                          <p class="u-text u-text-3">
+                        <div class="u-container-layout u-valign-top u-container-layout-4" data-animation-name="customAnimationIn" data-animation-duration="1000">
+                          <p class="u-text u-text-3" >
                             <div class="container">
                             <span class="num" data-val="280">000</span>
                             <span class="text">5-star Ratings</span>
@@ -161,11 +161,9 @@
                         </div>
                       </div>
                       <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-5">
-                        <div class="u-container-layout u-valign-top u-container-layout-5">
-                          <p class="u-text u-text-3">
-                            <div class="container">
-                              
-                             
+                        <div class="u-container-layout u-valign-top u-container-layout-5"  data-animation-name="customAnimationIn" data-animation-duration="1000">
+                          <p class="u-text u-text-4">
+                            <div class="container"> 
                               <ul class="perks">
                                 <li> <i class="fa-solid fa-hand-holding-hand"></i> Free Replacement</li>
                                 <li> <i class="fa-solid fa-rotate-left"></i> Return within 20 days</li> 
